update sermon mobile styling and fix filter bugs for Speaker and Service Type

--- a/src/scss/elements/_filter.scss
+++ b/src/scss/elements/_filter.scss
@@ -150,13 +150,14 @@
 	&--filters {
 		display: flex;
 		margin-bottom: 2rem;
+		flex-flow: row wrap;
+		gap: .5rem;
 
 		&--filter {
 			border: 1px solid;
 			border-radius: 20px;
 			display: inline-flex;
 			padding: 0 .5em;
-			margin-right: .5em;
 			text-decoration: none;
 		}
 	}
