--- a/src/scss/item/_list.scss
+++ b/src/scss/item/_list.scss
@@ -1,6 +1,11 @@
 .cpl-list-item {
 	--cpl-list-item-gap: min(3.5vw, var(--cp-gap--sm, 1rem));
 	--cpl-list-item-padding: var(--cp-gap--md);
+	--cpl-list-item-thumb-width: max(17%, 100px);
+	--cpl-list-item-content-height: 90%;
+	--cpl-list-item-actions-mobile-display: flex;
+	--cpl-image-aspect-ratio: auto;
+	--cp-font-size: clamp( 10px, 3vw, 14px);
 	padding: 0;
 	position: relative;
 	background: transparent;
@@ -24,7 +29,7 @@
 		display: flex;
 		flex-flow: row;
 		width: 100%;
-		gap: var(--cpl-list-item-gap);
+		min-height: var(--cpl-list-item-content-height);
 	}
 
 	&:before {
@@ -56,26 +61,34 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			padding-bottom: 100%;
-			background-position: center center !important;
-			//background-color: rgb(196, 196, 196);
-
-			@include media-breakpoint-up(md) {
-				padding-bottom: 62.5%;
-			}
 		}
 
 		img {
-			display: none;
-			width: auto;
-			height: auto;
-			max-width: 100%;
+			aspect-ratio: var(--cpl-image-aspect-ratio);
+			object-fit: cover;
+			width: 100%;
 		}
 	}
 
 	&--thumb {
-		flex: 0 0 17%;
+		flex: 0 0 var(--cpl-list-item-thumb-width);
 		position: relative;
+	}
+
+	&--ratio-1x1 {
+		--cpl-image-aspect-ratio: 1 / 1;
+		--cpl-list-item-thumb-width: max(14%, 65px);
+		--cpl-list-item-content-height: 80%;
+	}
+
+	&--ratio-4x3 {
+		--cpl-image-aspect-ratio: 4 / 3;
+		--cpl-list-item-thumb-width: max(15%, 75px);
+	}
+
+	&--ratio-16x9 {
+		--cpl-image-aspect-ratio: 16 / 9;
+		--cpl-list-item-thumb-width: max(17%, 100px);
 	}
 
 	&--details {
@@ -84,8 +97,7 @@
 		flex-direction: column;
 		justify-content: space-between;
 		overflow: hidden;
-		gap: calc(var(--cp-gap--sm) / 2);
-		padding: var(--cpl-list-item-padding) 0;
+		padding: var(--cpl-list-item-padding) var(--cpl-list-item-padding) var(--cpl-list-item-padding) 0;
 
 		> * {
 			margin-bottom: 0;
@@ -93,12 +105,10 @@
 	}
 
 	&--title {
-		margin-bottom: 0;
-		font-size: min(3.75vw, var(--cp-font-size-h5));
-		line-height: 1.5;
-		overflow: hidden;
-		white-space: nowrap;
-		text-overflow: ellipsis;
+		margin-top: 0;
+		margin-bottom: .25em;
+		font-size: clamp( 12px, 2.5vw, var(--cp-font-size-h5));
+		line-height: 1.25;
 	}
 
 	.cpl-list-item--title {
@@ -106,7 +116,7 @@
 	}
 
 	.cpl-meta {
-		font-size: min(2.75vw, var(--cp-font-size--sm));
+		font-size: clamp(10px, 2.25vw, var(--cp-font-size--sm));
 		margin-top: auto;
 		margin-bottom: 0;
 		padding-top: var(--cp-gap-base);
@@ -173,7 +183,7 @@
 
 		.cpl-meta,
 		.cpl-info {
-			font-size: min(2.75vw, var(--cp-font-size--sm));
+			font-size: min(10px, 2.25vw, var(--cp-font-size--sm));
 
 			> * {
 				display: none;
@@ -185,15 +195,7 @@
 		}
 
 		&--thumb {
-			padding: 0;
-
-			&--canvas {
-				padding: 0;
-				position: absolute;
-				height: 100%;
-				width: 100%;
-				object-fit: cover;
-			}
+			//--cpl-list-item-padding: calc(var(--cpl-list-item-gap) * .5);
 		}
 
 		&--title {
@@ -223,27 +225,16 @@
 
 			button {
 				width: 100%;
+				padding: 0 calc( var(--cpl-list-item-gap) / 2 );
 			}
-		}
-
-		.cpl-item--actions {
-			//position: absolute;
-			//right: -0.5em;
-			//top: 50%;
-			//margin-top: -1em;
-			//background: white;
-			//border-radius: 100px;
 		}
 	}
 
 	@include media-breakpoint-down(sm) {
-		.cpl-list-item--title,
-		.cpl-info {
-			margin-bottom: 0;
-		}
+		--cpl-list-item-padding: calc(var(--cpl-list-item-gap) * .5);
+		--cpl-list-item-content-height: 100%;
 
-		.cpl-info,
-		.cpl-meta {
+		.cpl-info {
 			> *:not(:first-child) {
 				display: none;
 			}
@@ -254,7 +245,7 @@
 		}
 
 		.cpl-meta {
-			padding: 0;
+			display: none;
 		}
 
 		.cpl-item--info {
@@ -264,6 +255,7 @@
 		}
 
 		.cpl-list-item--actions {
+			display: var(--cpl-list-item-actions-mobile-display);
 			padding: 0;
 
 			.cpl-list-item--actions--buttons {
@@ -312,18 +304,6 @@
 
 				.cpl-list-item--details {
 					justify-content: center;
-				}
-			}
-		}
-
-		@include media-breakpoint-down(md) {
-			.cpl-list-item--thumb {
-				&--canvas {
-					padding: 0;
-					position: absolute;
-					height: auto;
-					width: 100%;
-					aspect-ratio: 1 / 1;
 				}
 			}
 		}
